<resources>
    <string name="app_name">Charitable</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Steve Bauer</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_profil">Profil</string>
    <string name="menu_meine_angebote">Meine Angebote</string>
    <string name="menu_historie">Historie</string>
    <string name="gericht">Gericht</string>
    <string name="todo">TODO</string>
    <string name="change_date">Datum ändern</string>
    <string name="name_of_meal">Name des Gerichtes</string>
    <string name="price">Preis in Euro</string>
    <string name="number_of_seats">Anzahl Plätze</string>
    <string name="ingredients">Zutaten</string>
    <string name="description">Beschreibung</string>
    <string name="charitable_organization">Spendenorganisation</string>
    <string name="create">Anlegen</string>
    <string name="previewimage">previewImage</string>
    <string name="bewertung">Bewertung</string>
    <string name="name">Name</string>
    <string name="sortByPrice">Preis</string>
    <string name="profil">Profil</string>
    <string name="userName">Steve Bauer</string>
    <string name="address">76187, Karlsruhe</string>
    <string name="addressDesc">76187, Karlsruhe</string>
    <string name="changePasswort">Passwort ändern</string>
    <string name="foodname">foodName</string>
    <string name="addressFull">Bahnhofsplatz 1a. 76137. Karlsruhe</string>
    <string name="country">Deutschland</string>
    <string name="countryHint">Land</string>
    <string name="paymentMethod">Paypal</string>
    <string name="paymentMethodHint">Zahlungsart</string>
    <string name="paymentDetailsHint">Kontonummer</string>
    <string name="paymentDetails">paypal@stevenbauer.de</string>
    <string name="statistic_button">Spendenstatistik einsehen</string>
    <string name="delete_user">Benutzerkonto löschen</string>
    <string name="edit"><![CDATA[Bearbeiten >]]></string>
</resources>