<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_profil"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_profil" />
        <item
            android:id="@+id/nav_meine_angebote"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_meine_angebote" />
        <item
            android:id="@+id/nav_historie"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_historie" />
    </group>
</menu>