<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    android:label="h"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="de.hka.charitable.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_profil"
        android:name="de.hka.charitable.ui.profil.ProfilFragment"
        android:label="@string/menu_profil"
        tools:layout="@layout/fragment_profil" />

    <fragment
        android:id="@+id/nav_meine_angebote"
        android:name="de.hka.charitable.ui.meine_angebote.MeineAngeboteFragment"
        android:label="@string/menu_meine_angebote"
        tools:layout="@layout/fragment_meine_angebote" />

    <fragment
        android:id="@+id/nav_historie"
        android:name="de.hka.charitable.ui.historie.HistorieFragment"
        android:label="@string/menu_historie"
        tools:layout="@layout/fragment_historie" />
</navigation>